Fix scrollbar issue in IE. Closes #190.

--- a/demo/src/components/App/components/Examples/components/CustomRender/theme.less
+++ b/demo/src/components/App/components/Examples/components/CustomRender/theme.less
@@ -19,6 +19,10 @@
     outline: none;
   }
 
+  &::-ms-clear {
+    display: none;
+  }
+
   .containerOpen & {
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
