--- a/demo/src/components/App/components/Examples/components/MultipleSections/theme.less
+++ b/demo/src/components/App/components/Examples/components/MultipleSections/theme.less
@@ -20,6 +20,10 @@
     outline: none;
   }
 
+  &::-ms-clear {
+    display: none;
+  }
+
   .containerOpen & {
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
